syntax = "proto3";

service TestProto {
	rpc TestGetString (Empty) returns (TestResponse);
}

message Empty {

}

message TestResponse {
	string ResponseMessage = 1;
}